--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,3 @@
 RewriteEngine On
-RewriteBase /
-RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.+)$ index.php [QSA,L]
+RewriteRule ^ index.php [QSA,L]
